# pixbr

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: examples.md  getting-started.md  index.md  reference.md
docs/guides/: odata-queries.md  understanding-pix-data.md
docs/stylesheets/: extra.css
src/pixbr/: __init__.py  _odata.py  aggregate.py  api.py  client.py  utils.py
tests/: test_odata.py  test_utils.py
